# LectureHubServer

./: .gitignore  README.md  pyproject.toml
cart/: admin.py  models.py  serializers.py  urls.py  views.py
cart/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
categories/: admin.py  models.py  serializers.py  urls.py  views.py
categories/migrations/: 0001_initial.py
common/: models.py
config/: authentication.py  settings.py  urls.py
lectures/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
lectures/migrations/: 0001_initial.py  0002_initial.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
videos/: admin.py  models.py  serializers.py  urls.py  views.py
videos/migrations/: 0001_initial.py
watchedlectures/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
watchedlectures/migrations/: 0001_initial.py  0002_alter_watchedlecture_lastplayed_and_more.py  0003_watchedlecture_is_completed.py  0004_remove_watchedlecture_duration.py
